Fix failing test by allowing security manager